[package]
name = "call-stack-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
log = "0.4.22"
stack-sizes = { version = "0.6.0", path = "../stack-sizes" }
thiserror = "1.0.64"
xmas-elf = "0.9.1"
llvm-sys = "181"
petgraph = "0.6.3"
rustc-demangle = "0.1.24"
